tdf#107458 No active item for the overflow subtoolbar

Item id 0 has two meanings inside ToolBox. Methods like
GetCurItemId and GetDownItemId use it as "no item".
But that's also the id of a separator item, so calling
GetItemPos(0) will find a separator, if the ToolBox has
one.

Change-Id: I4f2c1fac1759fe0a3ae09d317909707084e16180